# palettecleanse

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  classes.py  cmap.py  colormap_explorer.ipynb  colormaps.py  custom.py  exploratory.ipynb  functions.py  palettes.py  pyproject.toml  requirements.txt  sefup.cfg  snaptocmap.py  usage.ipynb
palettecleanse/: custom.py  palette.py  palettes.py  presets.py  utils.py
palettecleanser/: custom.py  palettes.py  sefup.cfg
tests/: test_classes.py  test_cmap.py  test_colormaps.py  test_custom.py  test_functions.py  test_palette.py  test_palettes.py  test_presets.py
