[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "palettecleanse"
version = "1.1.1"
requires-python = ">= 3.8"
authors = [
    {name = "Jiaming Chen", email = "jiaming.justin.chen@gmail.com"}
]
maintainers = [
    {name = "Jiaming Chen", email = "jiaming.justin.chen@gmail.com"}
]
description = "palettecleanse is a python library for quick conversions of images to custom color palettes"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["matplotlib", "seaborn", "plotly", "data visualization", "color map", "color palette", "palette"]

[tool.setuptools]
include-package-data = true
[tool.setuptools.packages.find]
where = [".", "palettecleanse"]

[project.urls]
Homepage = "https://github.com/sansona/palettecleanse"
Issues = "https://github.com/sansona/palettecleanse/issues"